--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "react": "16.8.6",
         "react-native": "0.60.5",
         "react-native-cheerio": "^1.0.0-rc.4",
+        "react-native-firebase": "^5.5.6",
         "react-native-gesture-handler": "^1.4.1",
         "react-native-render-html": "^4.1.2",
         "react-navigation": "^4.0.5",
